<resources>
    <string name="app_name">豆芽</string>
    <string name="search">搜索</string>
    <string name="errorInternet">主人，好像网络状态有点不好哟</string>
    <string name="no_cast">暂无主角</string>
    <string name="no_name">暂无名字</string>
    <string name="no_director">暂无导演</string>
    <string name="no_rating">暂无评分</string>
    <string name="no_author">暂无作者</string>
    <string name="no_tag">暂无标签</string>
    <string name="no_origin_title">暂无原名</string>
    <string name="no_country">暂无国别</string>
    <string name="no_movie_year">暂无上映年份</string>
    <string name="douya_rating">豆芽评分</string>
    <string name="no_publisher">暂无出版社</string>
    <string name="no_publisher_year">暂无出版年份</string>
    <string name="zero_people">0人</string>
    <string name="rating0">0.0</string>
    <string name="movie_summary">剧情简介</string>
    <string name="no_summary">暂无简介</string>
    <string name="look_all_summary">查看全部简介</string>
    <string name="movie_cast">演职人员</string>
    <string name="book_summary">书籍简介</string>
    <string name="author_summary">作者简介</string>
    <string name="catalog">目录/试读</string>
    <string name="no_catalog">暂无目录</string>
    <string name="onErrorNetwork">加载失败,请查看网络状况</string>
    <string name="noMore">没有更多了哟</string>
    <string name="director">导演</string>
</resources>
