<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/book_inf_progress_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/book_inf_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/book_inf_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/errorInternet"
            android:textSize="18sp"
            android:visibility="gone" />
    </RelativeLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/book_inf_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:contentScrim="@color/colorAccent"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="exitUntilCollapsed|scroll|snap"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/book_inf_img_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5"
                />

            <TextView
                android:id="@+id/book_inf_img_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@color/colorBackground"
                android:visibility="visible"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <ImageView
                android:id="@+id/book_inf_img_main"
                android:layout_width="149dp"
                android:layout_height="196dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/book_inf_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/book_inf_linearLayout"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_toLeftOf="@+id/cardView"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/book_inf_text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/book_inf_text_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/no_tag"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/book_inf_text_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/no_author"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/book_inf_text_publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/no_publisher"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/book_inf_text_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/no_publisher_year"
                        android:textSize="12sp" />
                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="100dp"
                    android:layout_height="110dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/book_inf_linearLayout"
                    android:layout_marginRight="24dp"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/douya_rating"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/book_inf_text_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="4dp"
                            android:gravity="center"
                            android:text="@string/rating0"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                            android:id="@+id/book_inf_ratingbar"
                            style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:numStars="5"

                            android:stepSize="0.1" />

                        <TextView
                            android:id="@+id/book_inf_text_ratings_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:gravity="center"
                            android:text="@string/zero_people"
                            android:textSize="12sp" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorCutOffRule" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/book_summary"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_inf_text_book_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:text="@string/no_summary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_inf_text_more_book_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/look_all_summary"
                android:textColor="@color/colorTextBlue"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorCutOffRule" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/author_summary"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_inf_author_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:text="@string/no_summary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_inf_text_more_author_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/look_all_summary"
                android:textColor="@color/colorTextBlue"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorCutOffRule" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/catalog"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/book_inf_catalog_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:text="@string/no_catalog"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_inf_text_more_catalog_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/look_all_summary"
                android:textColor="@color/colorTextBlue"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorCutOffRule" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>